// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-ijanKN ZHlhR"
  size="medium"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Loader renders with different colours 1`] = `
Array [
  <div
    className="sc-ijanKN ZHlhR"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN cMRAgV"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN jOQhIV"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN fssVVl"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;

exports[`Loader renders with sizes 1`] = `
Array [
  <div
    className="sc-ijanKN bRKCyw"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN fHEYoE"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN kBpfUU"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN ZHlhR"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
  <div
    className="sc-ijanKN bmjexB"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>,
]
`;
